[package]
name = "sparse_set"
version = "0.6.0"
authors = ["Scott Godwin <sgodwincs@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/sgodwincs/sparse_set"
description = "Implementation of the sparse set data structure"
readme = "README.md"
categories = ["data-structures"]
keywords = ["sparse", "set"]

[features]
unstable = ["any_vec"]

[dependencies]
any_vec = { version = "0.10.0", optional = true }
arbitrary = { version = "1.1.3", optional = true }

[dev-dependencies]
coverage-helper = "0.1.0"
