[package]
name = "benches"
version = "0.1.0"
edition = "2021"
description = "Benchmarks for sparse_set crate"
publish = false

[dev-dependencies]
arbitrary = "1.1.3"
criterion = "0.3"
sparse_set = { path = ".." }
sparseset = "1.0"

[[bench]]
name = "sparse_set"
path = "benches/sparse_set/sparse_set.rs"
harness = false
